<resources>
    <string name="app_name">Spots</string>
    <string name="title_activity_maps">Map</string>
    <string name="directionsBtnString">Directions</string>
    <string name="shareBtnString">Share</string>
    <string name="moreInfoBtnString">More Info</string>
    <string name="appName">Spots</string>
    <string name="uploadMediaBtnString">Upload Media</string>
    <string name="completeUploadBtnString">Upload</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
	<string name="uploadImageBtnString">Choose File</string>
	<string name="noFileName">No file uploaded</string>
    <string name="image">Image</string>
	<string name="typeSpinner">Spot type</string>
	<string name="spot_type">Spot type</string>
</resources>
